# animator

./: .gitignore  API  Makefile  README  README.md  TODO  animator.cabal  animator.js  index.html  main.hs  main.html  misc.js  sketch.hs
bench/: fib.hs  strings.hs
misc/: API  TODO  Template.hs
src/: Haste
src-js/: animator.js
src/Animator/: Animation.hs  Prelude.hs  Random.hs
src/Animator/Internal/: Prelude.hs  Prim.hs
src/Data/: AdditiveGroup.hs  AffineSpace.hs  Basis.hs  Cross.hs  Derivative.hs  LinearMap.hs  Maclaurin.hs  MemoTrie.hs  NumInstances.hs  Semigroup.hs  VectorSpace.hs  Void.hs
src/Data/List/: NonEmpty.hs
src/Foreign/: JavaScript.hi  JavaScript.hs
src/Numeric/: Natural  Natural.hs  Natural.js
src/Web/: Document.hs  JQuery.hs
src/Web/Control/: Messaging.hs  Workers.hs
src/Web/Data/: Array.hs  Storage.hs
src/Web/Graphics/: Processing.hs
src/Web/Network/: Messaging.hs  Socket.hs
src/Web/System/: File.hs
