
name: Animator
version: 0.5
cabal-version: >= 0.14
build-type: Simple
author: Hans Hoglund
synopsis: Interactive 2-D animation for the Web

library                    
  build-depends: base, vector-space
  hs-source-dirs: src
  exposed-modules:
    Animator.Animation
    Animator.Internal.Prelude


