
name: Animator
version: 0.5
cabal-version: >= 0.14
build-type: Simple
author: Hans Hoglund
synopsis: Interactive 2-D animation for the Web

library                    
  build-depends: base, containers, semigroups, vector-space, ghc-prim, haste-compiler
  hs-source-dirs: src
  exposed-modules:
    Animator.Animation
    Animator.Prelude
    Animator.Internal.Prim


